# alexis_speech_assistant

./: .gitignore  asis.py  main.py  pyproject.toml  readme.md
